package com.company.Controllers;

/**
 * Created by denis on 21/09/15.
 */
public interface Busca {
    public void buscar();

}
