package com.company.Controllers;

/**
 * Created by denis on 21/09/15.
 */
public interface Relatorio {
    public void gerarRelatorio();
}
